
This file shows the changes in recent releases of MODx. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#2758] Add $modx->runProcessor($action,$scriptProperties,$options) to better handle processor execution; deprecated $modx->executeProcessor
- [#84] Make distribution name available in manager
- [#2666] Prevent sendRedirect() from preserving request parameters unless specified
- [#2721] Fixed issue with per page items in MODx.grid.Grid that was incorrectly handling int value
- [#2691] Fixed issue with duplicate aliases when duplicating a Resource
- [#2506] Flag properties as dirty when importing from a file on properties grid
- [#2592] Prevent cache files from being allowed in upload_files setting
- Improved areas dropdown filter to include number of settings that have that area
- [#2694] Fixed positioning and scrollbar issue in Fx with success status message on save
- Added setting clear_cache_refresh_trees that allows you to toggle whether the trees refresh on site cache clear; defaults to false
- [#2709] Fixed bug where Object-Template policies were unavailable to certain grids
- [#2597] Fixed bug where Context Setting xtype and area are reset on grid save
- Upgraded extension_packages setting to JSON for more options with packages and easier editing in Extras scripts
- Fixed bugs relating to using filemanager_path in a separate context, as well as other bugs with context-specific settings in mgr
- [#2496] Fixed bug that prevented icon from resetting when dragging Resources into a new parent
- [#713] Prevent children resources from being prefixed with "Duplicate of" when duplicating a resource unless explicitly told to do so
- [#2581] Fixed bug with resourcelist TV input type to handle resources from multiple contexts
- [#2518] Added delay to allow FC rules to load before RTEs load to allow RTE TVs to be moved