@@ -306,3 +306,190 @@ class modError {
         $this->message = '';
     }
 }
+
+/**
+ * Response class for Processor executions
+ */
+class modProcessorResponse {
+    /**
+     * When there is only a general error
+     */
+    const ERROR_GENERAL = 'error_general';
+    /**
+     * When there are only field-specific errors
+     */
+    const ERROR_FIELD = 'error_field';
+    /**
+     * When there is both field-specific and general errors
+     */
+    const ERROR_BOTH = 'error_both';
+    /**
+     * The field for the error type
+     */
+    const ERROR_TYPE = 'error_type';
+
+    /**
+     * @var modX A reference to the modX object
+     */
+    public $modx = null;
+    /**
+     * @var array A reference to the full response
+     */
+    public $response = null;
+    /**
+     * @var array A collection of modProcessorResponseError objects for each field-specific error
+     */
+    public $errors = array();
+    /**
+     * @var string The error type for this response
+     */
+    public $error_type = '';
+
+    /**
+     * The constructor for modProcessorResponse
+     * 
+     * @param modX $modx A reference to the modX object.
+     * @param array $response The array response from the modX.runProcessor method
+     */
+    function __construct(modX &$modx,$response = array()) {
+        $this->modx =& $modx;
+        $this->response = $response;
+        if ($this->isError()) {
+            if (!empty($response['errors']) && is_array($response['errors'])) {
+                foreach ($response['errors'] as $error) {
+                    $this->errors[] = new modProcessorResponseError($error);
+                }
+                if (!empty($response['message'])) {
+                    $this->error_type = modProcessorResponse::ERROR_BOTH;
+                } else {
+                    $this->error_type = modProcessorResponse::ERROR_FIELD;
+                }
+            } else {
+                $this->error_type = modProcessorResponse::ERROR_GENERAL;
+            }
+        }
+    }
+
+    /**
+     * Returns the type of error for this response
+     * @return string The type of error returned
+     */
+    public function getErrorType() {
+        return $this->error_type;
+    }
+
+    /**
+     * Checks to see if the response is an error
+     * @return Returns true if the response was a success, otherwise false
+     */
+    public function isError() {
+        return empty($this->response) || empty($this->response['success']);
+    }
+
+    /**
+     * Returns true if there is a general status message for the response.
+     * @return boolean True if there is a general message
+     */
+    public function hasMessage() {
+        return !empty($this->response['message']) ? true : false;
+    }
+
+    /**
+     * Gets the general status message for the response.
+     * @return string The status message
+     */
+    public function getMessage() {
+        return !empty($this->response['message']) ? $this->response['message'] : '';
+    }
+
+    /**
+     * Returns the entire response object in array form
+     * @return array The array response
+     */
+    public function getResponse() {
+        return $this->response;
+    }
+
+    /**
+     * Returns true if an object was sent with this response.
+     * @return boolean True if an object was sent.
+     */
+    public function hasObject() {
+        return !empty($this->response['object']) ? true : false;
+    }
+
+    /**
+     * Returns the array object, if is sent in the response
+     * @return array The object in the response, usually the object being performed on.
+     */
+    public function getObject() {
+        return !empty($this->response['object']) ? $this->response['object'] : array();
+    }
+
+    /**
+     * An array of modProcessorResponseError objects for each field-specific error
+     * @return array
+     */
+    public function getFieldErrors() {
+        return $this->errors;
+    }
+
+    /**
+     * Checks to see if there are any field-specific errors in this response
+     * @return boolean True if there were field-specific errors
+     */
+    public function hasFieldErrors() {
+        return !empty($this->errors) ? true : false;
+    }
+}
+/**
+ * An abstraction class of field-specific errors for a processor response
+ */
+class modProcessorResponseError {
+    /**
+     * @var array The error data itself
+     */
+    public $error = null;
+    /**
+     * @var string The field key that the error occurred on
+     */
+    public $field = null;
+    /**
+     * @var string The message that was sent for the field error
+     */
+    public $message = '';
+
+    /**
+     * The constructor for the modProcessorResponseError class
+     *
+     * @param array $error An array error response
+     */
+    function __construct($error = array()) {
+        $this->error = $error;
+        if (!empty($error['id'])) { $this->field = $error['id']; }
+        if (!empty($error['msg'])) { $this->message = $error['msg']; }
+    }
+
+    /**
+     * Returns the message for the field-specific error
+     * @return string
+     */
+    public function getMessage() {
+        return $this->message;
+    }
+
+    /**
+     * Returns the field key for the field-specific error
+     */
+    public function getField() {
+        return $this->field;
+    }
+    
+    /**
+     * Returns the array data for the field-specific error
+     * @return array
+     */
+    public function getError() {
+        return $this->error;
+    }
+}
